# tracecompare-benchmark

./: .gitignore  CMakeLists.txt  README.md  deps.sh
results/official/: getpid-base.csv  getpid-bookkeeping.csv  getpid-emptyprobes.csv  getpid-signal.csv  libunwind-base.csv  libunwind-nocache.csv  libunwind-optimal-nocache.csv  libunwind-optimal-withcache.csv  ust-base.csv  ust-tracepoint.csv
results/official/overhead-babeltrace/: critical-cpusyscalls.csv  kernel.csv  nothing.csv  notracing-cpusyscalls.csv  ust-cpusyscalls.csv
results/official/overhead-cpu/: critical-cpusyscalls.csv  kernel.csv  nothing.csv  notracing-cpusyscalls.csv  ust-cpusyscalls.csv
results/official/overhead-find/: critical-cpusyscalls.csv  kernel.csv  nothing.csv  notracing-cpusyscalls.csv  ust-cpusyscalls.csv
results/official/overhead-mongo/: critical-cpusyscalls.csv  kernel.csv  nothing.csv  notracing-cpusyscalls.csv  ust-cpusyscalls.csv
scripts/: all-repeat.sh  all.sh  micro-getpid.sh  micro-libunwind.sh  micro-ust.sh  overhead-all.sh  overhead.sh  summary.py
scripts/helpers/: babeltrace-run.sh  cpu-run.sh  execute.sh  find-run.sh  free.sh  lttngprofile.sh  lttngprofilemodules.sh  mongo-kill.sh  mongo-run.sh  prepare.sh  profile.sh  trace-sys.sh  trace-ust.sh  trace-ustcritical.sh
src/benchmark/: getpid.cpp  libunwind.cpp  mongo.cpp  ust-tp.cpp  ust-tp.h  ust.cpp
src/utils/: attributes.h  priority.h  scoped_tp.cpp  scoped_tp.h  time.h  tp.cpp  tp.h  use_cpu.cpp  use_cpu.h  use_int.h  utils.cpp  utils.h
